--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-
+oi oi, esse é meu primeiro site, to tentando fazer uns trabalho de freelance, ai se vc se interessar pfvr me contrate,
+quero guardar para um monitor novo :D
